# facebook-json-archive-encoding-fix

./: Dockerfile  README.md  pyproject.toml
src/: main.py
